istio-resouces/svc-flaskci.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsflaskci
  labels:
    app: nsflaskci
    service: nsflaskci
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app: flaskci
