istio-resouces/virtual-service.yaml
aapiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nsflaskci
spec:
  hosts:
  - "nsflaskci.duckdns.org"
  gateways:
  - nsflaskci-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: nsflaskci
